--- a/demo/DemoSolution/DemoProject/DemoProject.csproj
+++ b/demo/DemoSolution/DemoProject/DemoProject.csproj
@@ -6,4 +6,9 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Extensions.MudBlazor.StaticInput" Version="3.2.1" />
+      <PackageReference Include="MudBlazor" Version="8.13.0" />
+    </ItemGroup>
+
 </Project>
