--- a/demo/DemoSolution/DemoProject/appsettings.json
+++ b/demo/DemoSolution/DemoProject/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"ConnectionStrings": {
+		"SnackContext": "Server=.; Database=snackdb; Integrated Security=true; TrustServerCertificate=true;"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
