Circuitprobleem laten zien

--- a/demo/DemoSolution/DemoProject/appsettings.json
+++ b/demo/DemoSolution/DemoProject/appsettings.json
@@ -1,6 +1,6 @@
 {
 	"ConnectionStrings": {
-		"SnackContext": "Server=.; Database=snackdb; Integrated Security=true; TrustServerCertificate=true;"
+		"SnackContext": "Server=127.0.0.1,1433; Database=snackdb; User Id=sa; Password=Te$t123$; TrustServerCertificate=true;"
 	},
 	"Logging": {
 		"LogLevel": {
