--- a/demo/DemoSolution/DemoProject/DemoProject.csproj
+++ b/demo/DemoSolution/DemoProject/DemoProject.csproj
@@ -7,14 +7,19 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Extensions.MudBlazor.StaticInput" Version="3.2.1" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.9">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-      <PackageReference Include="MudBlazor" Version="8.13.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.9"/>
+        <PackageReference Include="Extensions.MudBlazor.StaticInput" Version="3.2.1"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.9">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="MudBlazor" Version="8.13.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\BlazorApp1\BlazorApp1.Client\BlazorApp1.Client.csproj"/>
     </ItemGroup>
 
 </Project>
