--- a/demo/DemoSolution/BlazorApp1/BlazorApp1.Client/BlazorApp1.Client.csproj
+++ b/demo/DemoSolution/BlazorApp1/BlazorApp1.Client/BlazorApp1.Client.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Flurl.Http" Version="4.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.9"/>
     </ItemGroup>
 
