YARP ingezet om backend-API aan te spreken

--- a/demo/DemoSolution/DemoProject/appsettings.json
+++ b/demo/DemoSolution/DemoProject/appsettings.json
@@ -1,12 +1,31 @@
 {
-	"ConnectionStrings": {
-		"SnackContext": "Server=127.0.0.1,1433; Database=snackdb; User Id=sa; Password=Te$t123$; TrustServerCertificate=true;"
-	},
-	"Logging": {
-		"LogLevel": {
-			"Default": "Information",
-			"Microsoft.AspNetCore": "Warning"
-		}
-	},
-	"AllowedHosts": "*"
+  "ConnectionStrings": {
+    "SnackContext": "Server=127.0.0.1,1433; Database=snackdb; User Id=sa; Password=Te$t123$; TrustServerCertificate=true;"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "ReverseProxy": {
+    "Routes": {
+      "route1": {
+        "ClusterId": "oogabooga",
+        "Match": {
+          "Path": "api/{**catch-all}"
+        }
+      }
+    },
+    "Clusters": {
+      "oogabooga": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://localhost:5003/"
+          }
+        }
+      }
+    }
+  }
 }
