--- a/demo/DemoSolution/DemoProject/DemoProject.csproj
+++ b/demo/DemoSolution/DemoProject/DemoProject.csproj
@@ -19,6 +19,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="MudBlazor" Version="8.13.0"/>
+        <PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" />
     </ItemGroup>
 
     <ItemGroup>
