--- a/demo/DemoSolution/DemoProject/appsettings.json
+++ b/demo/DemoSolution/DemoProject/appsettings.json
@@ -15,6 +15,9 @@
         "ClusterId": "oogabooga",
         "Match": {
           "Path": "api/{**catch-all}"
+        },
+        "Metadata": {
+          "Duende.Bff.Yarp.TokenType": "User"
         }
       }
     },
